--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-# Compiled class file
+# Compiled class files
 *.class
 
-# Log file
+# Log files
 *.log
+*.out
+*.err
 
 # BlueJ files
 *.ctxt
@@ -10,7 +12,7 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files
 *.jar
 *.war
 *.nar
@@ -19,6 +21,80 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# ==============================
+# Maven
+# ==============================
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# Maven specific files
+.mvn/
+.settings/
+.classpath
+.project
+
+# ==============================
+# Spring Boot
+# ==============================
+/*.iws
+/*.iml
+/*.ipr
+*.h2.db
+*.mv.db
+
+# ==============================
+# IntelliJ IDEA
+# ==============================
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+.idea_modules/
+
+# IntelliJ artifact folders
+out/
+*.iml
+.idea/
+
+# ==============================
+# Eclipse
+# ==============================
+.classpath
+.project
+.settings/
+
+# ==============================
+# OS Files
+# ==============================
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.cache/
+.config/
+.local/
+
+# ==============================
+# System Files
+# ==============================
+.vscode/
+*.swp
+*.swo
