--- a/driver-service/src/main/resources/application.properties
+++ b/driver-service/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-server.port=8082
+# Application Name
 spring.application.name=driver-service
+
+# Server Port
+server.port=8082
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5433/driverdb
@@ -7,8 +10,9 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA and Hibernate Config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Eureka Configuration
+# Eureka Client Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
