--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
     <groupId>com.fleetmanagement</groupId>
     <artifactId>fleet-management-microservices</artifactId>
     <version>1.0.0</version>
-    <packaging>pom</packaging> <!-- This specifies that this is a parent POM -->
+    <packaging>pom</packaging> <!-- Parent POM -->
 
-    <!-- Specify the modules (microservices) -->
+    <!-- Specify the modules -->
     <modules>
         <module>eureka-server</module>
         <module>api-gateway</module>
@@ -16,13 +16,15 @@
         <module>driver-service</module>
         <module>route-service</module>
         <module>tracking-service</module>
+        <module>driver-service-client</module>
+        <module>common-entities</module>
     </modules>
 
     <!-- Define common properties -->
     <properties>
         <java.version>17</java.version>
         <spring.boot.version>3.3.3</spring.boot.version>
-        <spring.cloud.version>2023.0.3</spring.cloud.version> <!-- Adjust based on your Spring Cloud version -->
+        <spring.cloud.version>2023.0.3</spring.cloud.version>
     </properties>
 
     <!-- Dependency Management -->
@@ -51,14 +53,14 @@
     <!-- Build and Plugin Management -->
     <build>
         <plugins>
-            <!-- Spring Boot Maven Plugin for building JARs -->
+            <!-- Spring Boot Maven Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring.boot.version}</version> <!-- Add this line -->
+                <version>${spring.boot.version}</version>
             </plugin>
 
-            <!-- Maven Compiler Plugin for Java version -->
+            <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
