fixed import issues

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
 spring.application.name=api-gateway
+eureka.client.enabled=false
 
 # Eureka Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
