--- a/driver-service-client/pom.xml
+++ b/driver-service-client/pom.xml
@@ -17,7 +17,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>DriverServiceClient</name>
 	<description>Driver service client for Fleet Base Management Application</description>
-
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
@@ -88,13 +87,13 @@
 		</dependencies>
 	</dependencyManagement>
 
-	<build>
-		<plugins>
-			<!-- Spring Boot Maven Plugin -->
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+<!--	<build>-->
+<!--		<plugins>-->
+<!--			&lt;!&ndash; Spring Boot Maven Plugin &ndash;&gt;-->
+<!--			<plugin>-->
+<!--				<groupId>org.springframework.boot</groupId>-->
+<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--			</plugin>-->
+<!--		</plugins>-->
+<!--	</build>-->
 </project>
