--- a/fleet-service/pom.xml
+++ b/fleet-service/pom.xml
@@ -98,6 +98,12 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-openfeign</artifactId>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-fileupload</groupId>
+						<artifactId>commons-fileupload</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 
 		</dependencies>
