Implement tracking service

--- a/tracking-service/src/main/resources/application.properties
+++ b/tracking-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8085
 spring.application.name=tracking-service
+google.maps.api-key=YOUR_GOOGLE_MAPS_API_KEY
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5433/trackingdb
